--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Configure clickAnimation function for selection buttons.     -->
+<!-- commit: Fixed button clickAnimation to trigger alert text.     -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
@@ -27,18 +27,20 @@
             </div>
             <div class = "gifbutton-box">
                 <img class = "scissors-gif" src = "/img/scissors.gif">
-                <input id = "scissorsClick" type = "button" value = "Scissors">
+                <button onclick = "clickAnimation()"> Scissors </button>
             </div>
         </div>
         
         <script>
-            // This  playRound function collects player and computer scores and compares them, then returns an object:
-            function playRound()
-            {
-                function clickAnimation()
+
+            function clickAnimation()
                 {
                     alert('hi!');
                 }
+            // This  playRound function collects player and computer scores and compares them, then returns an object:
+            function playRound()
+            {
+                
 
                 // Prompts user for choice in rock, paper, or scissors. Stores choice in 'userPlay' & assigns score via 'playerScore'.
                 let playerScore = -1;
