--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Restructure index.html. Edit choice button style.     -->
+<!-- commit: Delete play button. Add scoreboard & style.   -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
@@ -18,9 +18,19 @@
                     It's a lovely evening for some good 'ol R.P.S. <br>
                     Play your best against the computer!
                 </h2>
-                <button> Play </button>
             </div>
 
+            <div class = "scoreboard">
+                <div class="player-score">
+                    <h3> Player </h3>
+                    <p> 0 </p>
+                </div>
+                <div class="computer-score">
+                    <h3> Computer </h3>
+                    <p> 0 </p>
+                </div>
+
+            </div>
             <div class="options">
                 <button class="rock"> <img class = "rock-gif" src = "img/rock.gif"> </button>
                 <button class="paper"> <img class = "paper-gif" src = "img/paper.gif"> </button>
