Style intro div. Style scoreboard.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Delete play button. Add scoreboard & style.   -->
+<!-- commit: Style intro div. Style scoreboard.  -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
@@ -18,6 +18,7 @@
                     It's a lovely evening for some good 'ol R.P.S. <br>
                     Play your best against the computer!
                 </h2>
+                <button> Play! </button>
             </div>
 
             <div class = "scoreboard">
@@ -29,13 +30,25 @@
                     <h3> Computer </h3>
                     <p> 0 </p>
                 </div>
+            </div>
 
+            <div class="faceoff">
+                <div class="player-choices">
+                    <h4> You chose: </h4>
+                    <img class = "p-choice-gif" src = "img/rock.gif">
+                </div>
+                <div class="player-choices">
+                    <h4> The computer chose: </h4>
+                    <img class = "c-choice-gif" src = "img/rock.gif">
+                </div>
+                <div class="options">
+                    <button class="rock"> <img class = "rock-gif" src = "img/rock.gif"> </button>
+                    <button class="paper"> <img class = "paper-gif" src = "img/paper.gif"> </button>
+                    <button class="scissors"> <img class = "scissors-gif" src = "img/scissors.gif"> </button>
+                </div>
             </div>
-            <div class="options">
-                <button class="rock"> <img class = "rock-gif" src = "img/rock.gif"> </button>
-                <button class="paper"> <img class = "paper-gif" src = "img/paper.gif"> </button>
-                <button class="scissors"> <img class = "scissors-gif" src = "img/scissors.gif"> </button>
-            </div>
+
+            
         </section>
         
         <script src = "app.js" charset = "UTF-8"></script>
