--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Style intro div. Style scoreboard.  -->
+<!-- commit: Style faceoff panel. Re-arrange html elements.  -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
@@ -21,30 +21,32 @@
                 <button> Play! </button>
             </div>
 
-            <div class = "scoreboard">
-                <div class="player-score">
-                    <h3> Player </h3>
-                    <p> 0 </p>
-                </div>
-                <div class="computer-score">
-                    <h3> Computer </h3>
-                    <p> 0 </p>
-                </div>
-            </div>
-
             <div class="faceoff">
-                <div class="player-choices">
-                    <h4> You chose: </h4>
-                    <img class = "p-choice-gif" src = "img/rock.gif">
+                <div class = "scoreboard">
+                    <div class="player-score">
+                        <h3> Player </h3>
+                        <p> 0 </p>
+                    </div>
+                    <div class="computer-score">
+                        <h3> Computer </h3>
+                        <p> 0 </p>
+                    </div>
                 </div>
-                <div class="player-choices">
-                    <h4> The computer chose: </h4>
-                    <img class = "c-choice-gif" src = "img/rock.gif">
-                </div>
+
                 <div class="options">
                     <button class="rock"> <img class = "rock-gif" src = "img/rock.gif"> </button>
                     <button class="paper"> <img class = "paper-gif" src = "img/paper.gif"> </button>
                     <button class="scissors"> <img class = "scissors-gif" src = "img/scissors.gif"> </button>
+                </div>
+                
+                <div class="player-choices">
+                    <h4> You chose: </h4>
+                    <img class = "p-choice-gif">
+                </div>
+                
+                <div class="player-choices">
+                    <h4> The computer chose: </h4>
+                    <img class = "c-choice-gif" >
                 </div>
             </div>
 
