Create game function to manage global variables.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Style faceoff panel. Re-arrange html elements.  -->
+<!-- commit: Add div fadeOut & div fadeIn. Fix intro button cursor  -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
