--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Add div fadeOut & div fadeIn. Fix intro button cursor  -->
+<!-- commit: Add fadeOut to Intro.  -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
@@ -21,7 +21,7 @@
                 <button> Play! </button>
             </div>
 
-            <div class="faceoff">
+            <div class="faceoff fadeOut">
                 <div class = "scoreboard">
                     <div class="player-score">
                         <h3> Player </h3>
