Rename buttons. Add data selection to buttons.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Add fadeOut to Intro.  -->
+<!-- commit: Rename buttons. Add data selection to buttons.  -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
@@ -34,9 +34,9 @@
                 </div>
 
                 <div class="options">
-                    <button class = "rock"> <img class = "rock-gif" src = "img/rock.gif"> </button>
-                    <button class = "paper"> <img class = "paper-gif" src = "img/paper.gif"> </button>
-                    <button class = "scissors"> <img class = "scissors-gif" src = "img/scissors.gif"> </button>
+                    <button class = "selection" data-selection = 'rock'> <img class = "rock-gif" src = "img/rock.gif"> </button>
+                    <button class = "selection" data-selection = 'paper'> <img class = "paper-gif" src = "img/paper.gif"> </button>
+                    <button class = "selection"data-selection = 'scissors'> <img class = "scissors-gif" src = "img/scissors.gif"> </button>
                 </div>
                 
                 <div class="player-choices">
