Add image subcategory to COMPUTERCHOICES to update scoreboard.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                     </div>
                     <div class="computer-choice">
-
+                        
                     </div>
                     <div class="computer-score">
                         <h3> Computer </h3>
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="options">
-                    <button class = "selection" data-selection = 'rock'> <img class = "rock-gif" src = "img/rock.gif"> </button>
+                    <button class = "selection" data-selection = 'rock'> <img src = "img/rock.gif" id = "rock-gif"> </button>
                     <button class = "selection" data-selection = 'paper'> <img class = "paper-gif" src = "img/paper.gif"> </button>
                     <button class = "selection"data-selection = 'scissors'> <img class = "scissors-gif" src = "img/scissors.gif"> </button>
                 </div>
