Add winnerScreen and style. Add fade in/out properties.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                     <button class = "selection"data-selection = 'scissors'> <img class = "scissors-gif" src = "img/scissors.gif"> </button>
                 </div>
             </div>
+            <div class="winner-screen fadeOut">
+                <h4> TEXT </h4>
+            </div>
         </section>
         
         <script src = "app.js" charset = "UTF-8"></script>
