Add play-again button. Style. add winnerText.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
                     <button class = "selection"data-selection = 'scissors'> <img class = "scissors-gif" src = "img/scissors.gif"> </button>
                 </div>
             </div>
+
             <div class="winner-screen fadeOut">
-                <h4> TEXT </h4>
+                <div class = "text">
+
+                </div>
+                <button> Play again? </button>
             </div>
         </section>
         
