Add "first to score 5 wins."

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Rename buttons. Add data selection to buttons. -->
+<!-- commit: Add "first to score 5 wins." -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
@@ -17,6 +17,10 @@
                 <h2 class="instructions">
                     It's a lovely evening for some good 'ol R.P.S. <br>
                     Play your best against the computer!
+                    <br>
+                    <br>
+                    <br>
+                    First to score 5 wins!
                 </h2>
                 <button> Play! </button>
             </div>
